misterious error about mxnet customed layer

--- a/seq2seq.ipynb
+++ b/seq2seq.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T03:14:50.359769Z",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 162,
    "metadata": {
     "attributes": {
      "classes": [],
@@ -69,21 +69,23 @@
     "        self.embedding = nn.Embedding(vocab_size, embed_size)\n",
     "        self.rnn = rnn.LSTM(num_hiddens, num_layers, dropout=dropout)\n",
     "        \n",
-    "    def forward(self, left_input, right_input, *args):\n",
+    "    def forward(self, left_input, right_input):\n",
+    "        print('in encoder')\n",
     "        X_left = self.embedding(left_input) # X shape: (batch_size, seq_len, embed_size)\n",
     "        X_left = X_left.swapaxes(0, 1)  # RNN needs first axes to be time\n",
     "        left_state = self.rnn.begin_state(batch_size=X_left.shape[1], \\\n",
     "                                               ctx=X_left.context)\n",
-    "        left_out, left_state = self.rnn(X_left, left_state)\n",
+    "        left_out, _ = self.rnn(X_left, left_state)\n",
+    "        \n",
     "        X_right = self.embedding(right_input) # X shape: (batch_size, seq_len, embed_size)\n",
     "        X_right = X_right.swapaxes(0, 1)  # RNN needs first axes to be time\n",
     "        right_state = self.rnn.begin_state(batch_size=X_right.shape[1], \\\n",
     "                                               ctx=X_right.context)\n",
-    "        right_out, right_state = self.rnn(X_right, right_state)\n",
+    "        right_out, _ = self.rnn(X_right, right_state)\n",
     "        # The shape of out is (seq_len, batch_size, num_hiddens).\n",
     "        # state contains the hidden state and the memory cell\n",
     "        # of the last time step, the shape is (num_layers, batch_size, num_hiddens)\n",
-    "        return left_out, right_out, left_state, right_state"
+    "        return left_out[:][-1][:], right_out[:][-1][:]"
    ]
   },
   {
@@ -94,12 +96,12 @@
     }
    },
    "source": [
-    "Sanity test"
+    "Sanity check"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 166,
    "metadata": {
     "attributes": {
      "classes": [],
@@ -109,12 +111,53 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "in encoder\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "((7, 4, 16), 2, (2, 4, 16), (2, 4, 16))"
+       "(\n",
+       " [[-9.3526716e-05 -4.9678278e-05  1.4228432e-05 -1.6644204e-04\n",
+       "    9.7964104e-05 -1.9300998e-04  1.5927634e-04 -2.7911537e-05\n",
+       "    1.8589392e-04 -7.2337089e-06 -3.2081801e-04 -1.8444611e-05\n",
+       "   -1.9077418e-04 -1.6275543e-04 -1.9651403e-05 -5.4234817e-05]\n",
+       "  [-9.3526716e-05 -4.9678278e-05  1.4228432e-05 -1.6644204e-04\n",
+       "    9.7964104e-05 -1.9300998e-04  1.5927634e-04 -2.7911537e-05\n",
+       "    1.8589392e-04 -7.2337089e-06 -3.2081801e-04 -1.8444611e-05\n",
+       "   -1.9077418e-04 -1.6275543e-04 -1.9651403e-05 -5.4234817e-05]\n",
+       "  [-9.3526716e-05 -4.9678278e-05  1.4228432e-05 -1.6644204e-04\n",
+       "    9.7964104e-05 -1.9300998e-04  1.5927634e-04 -2.7911537e-05\n",
+       "    1.8589392e-04 -7.2337089e-06 -3.2081801e-04 -1.8444611e-05\n",
+       "   -1.9077418e-04 -1.6275543e-04 -1.9651403e-05 -5.4234817e-05]\n",
+       "  [-9.3526716e-05 -4.9678278e-05  1.4228432e-05 -1.6644204e-04\n",
+       "    9.7964104e-05 -1.9300998e-04  1.5927634e-04 -2.7911537e-05\n",
+       "    1.8589392e-04 -7.2337089e-06 -3.2081801e-04 -1.8444611e-05\n",
+       "   -1.9077418e-04 -1.6275543e-04 -1.9651403e-05 -5.4234817e-05]]\n",
+       " <NDArray 4x16 @cpu(0)>, \n",
+       " [[-2.6243614e-04  1.8116225e-04  3.0691397e-05 -1.7932788e-04\n",
+       "    1.9677175e-04 -4.0638287e-04 -1.2812782e-04  2.4706309e-04\n",
+       "    1.3254523e-04  3.1308370e-04  1.3571592e-04 -3.8519321e-04\n",
+       "   -3.3583379e-04  1.8453244e-04  2.6650197e-04 -3.7035818e-04]\n",
+       "  [-2.6243614e-04  1.8116225e-04  3.0691397e-05 -1.7932788e-04\n",
+       "    1.9677175e-04 -4.0638287e-04 -1.2812782e-04  2.4706309e-04\n",
+       "    1.3254523e-04  3.1308370e-04  1.3571592e-04 -3.8519321e-04\n",
+       "   -3.3583379e-04  1.8453244e-04  2.6650197e-04 -3.7035818e-04]\n",
+       "  [-2.6243614e-04  1.8116225e-04  3.0691397e-05 -1.7932788e-04\n",
+       "    1.9677175e-04 -4.0638287e-04 -1.2812782e-04  2.4706309e-04\n",
+       "    1.3254523e-04  3.1308370e-04  1.3571592e-04 -3.8519321e-04\n",
+       "   -3.3583379e-04  1.8453244e-04  2.6650197e-04 -3.7035818e-04]\n",
+       "  [-2.6243614e-04  1.8116225e-04  3.0691397e-05 -1.7932788e-04\n",
+       "    1.9677175e-04 -4.0638287e-04 -1.2812782e-04  2.4706309e-04\n",
+       "    1.3254523e-04  3.1308370e-04  1.3571592e-04 -3.8519321e-04\n",
+       "   -3.3583379e-04  1.8453244e-04  2.6650197e-04 -3.7035818e-04]]\n",
+       " <NDArray 4x16 @cpu(0)>)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,26 +167,100 @@
     "                         num_hiddens=16, num_layers=2)\n",
     "encoder.initialize()\n",
     "X = nd.zeros((4, 7))\n",
-    "left_output, right_output, left_state, right_state = encoder(X, X)\n",
+    "Y = nd.ones((4, 10))\n",
+    "left_output, right_output = encoder(X, Y)\n",
     "# after running the encoder, output and state are both a list\n",
     "# which contains the whole output and state of each time state in history\n",
-    "left_output.shape, len(right_state), left_state[0].shape, right_state[1].shape"
+    "left_output, right_output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ManhattanDistance(nn.Block):\n",
-    "    def __init__(self, **kwargs):\n",
-    "        super(ExtractLastState, self).__init__(**kwargs)\n",
-    "    \n",
-    "    def forward(self, left_output, right_output, left_state, right_state):\n",
-    "        left_embed = left_state[-1]\n",
-    "        right_embed = right_state[-1]\n",
-    "        return nd.exp(-nd.sum(nd.abs(left_embed-right_embed), axis=1, keepdims=True))"
+    "def exp_neg_abs_sim(left_embed, right_embed):\n",
+    "    return nd.exp(-nd.sum(nd.abs(left_embed-right_embed), axis=1, keepdims=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ManhattanDistance = nn.Lambda(lambda x: exp_neg_abs_sim(x[0], x[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "[[0.99716175]\n",
+       " [0.99716175]\n",
+       " [0.99716175]\n",
+       " [0.99716175]]\n",
+       "<NDArray 4x1 @cpu(0)>"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ManhattanDistance([left_output, right_output])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model building"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequential(\n",
+      "  (0): TwoSeqEncoder(\n",
+      "    (embedding): Embedding(2 -> 10, float32)\n",
+      "    (rnn): LSTM(None -> 32, TNC, num_layers=16)\n",
+      "  )\n",
+      ")\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "forward() takes 2 positional arguments but 3 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-169-e391240db854>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minitialize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/miniconda3/envs/dl/lib/python3.7/site-packages/mxnet/gluon/block.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m    538\u001b[0m             \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    539\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 540\u001b[0;31m         \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    541\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    542\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: forward() takes 2 positional arguments but 3 were given"
+     ]
+    }
+   ],
+   "source": [
+    "model = nn.Sequential()\n",
+    "model.add(TwoSeqEncoder(vocab_size=2, embed_size=10, num_hiddens=32, num_layers=16))\n",
+    "model.initialize()\n",
+    "print(model)\n",
+    "model(X, Y)"
    ]
   },
   {
