rename mxnet model

--- a/seq_encoder.ipynb
+++ b/seq_encoder.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T03:14:50.359769Z",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 14,
    "metadata": {
     "attributes": {
      "classes": [],
@@ -69,23 +69,23 @@
     "        self.embedding = nn.Embedding(vocab_size, embed_size)\n",
     "        self.rnn = rnn.LSTM(num_hiddens, num_layers, dropout=dropout)\n",
     "        \n",
-    "    def forward(self, left_input, right_input):\n",
-    "        print('in encoder')\n",
+    "    def forward(self, X, *args):\n",
+    "        left_input, right_input = X[0], X[1]\n",
     "        X_left = self.embedding(left_input) # X shape: (batch_size, seq_len, embed_size)\n",
     "        X_left = X_left.swapaxes(0, 1)  # RNN needs first axes to be time\n",
     "        left_state = self.rnn.begin_state(batch_size=X_left.shape[1], \\\n",
     "                                               ctx=X_left.context)\n",
-    "        left_out, _ = self.rnn(X_left, left_state)\n",
+    "        left_out, left_state = self.rnn(X_left, left_state)\n",
     "        \n",
     "        X_right = self.embedding(right_input) # X shape: (batch_size, seq_len, embed_size)\n",
     "        X_right = X_right.swapaxes(0, 1)  # RNN needs first axes to be time\n",
     "        right_state = self.rnn.begin_state(batch_size=X_right.shape[1], \\\n",
     "                                               ctx=X_right.context)\n",
-    "        right_out, _ = self.rnn(X_right, right_state)\n",
+    "        right_out, right_state = self.rnn(X_right, right_state)\n",
     "        # The shape of out is (seq_len, batch_size, num_hiddens).\n",
     "        # state contains the hidden state and the memory cell\n",
     "        # of the last time step, the shape is (num_layers, batch_size, num_hiddens)\n",
-    "        return left_out[:][-1][:], right_out[:][-1][:]"
+    "        return left_out[-1][:][:], right_out[-1][:][:]"
    ]
   },
   {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 15,
    "metadata": {
     "attributes": {
      "classes": [],
@@ -111,53 +111,46 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "in encoder\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "(\n",
-       " [[-9.3526716e-05 -4.9678278e-05  1.4228432e-05 -1.6644204e-04\n",
-       "    9.7964104e-05 -1.9300998e-04  1.5927634e-04 -2.7911537e-05\n",
-       "    1.8589392e-04 -7.2337089e-06 -3.2081801e-04 -1.8444611e-05\n",
-       "   -1.9077418e-04 -1.6275543e-04 -1.9651403e-05 -5.4234817e-05]\n",
-       "  [-9.3526716e-05 -4.9678278e-05  1.4228432e-05 -1.6644204e-04\n",
-       "    9.7964104e-05 -1.9300998e-04  1.5927634e-04 -2.7911537e-05\n",
-       "    1.8589392e-04 -7.2337089e-06 -3.2081801e-04 -1.8444611e-05\n",
-       "   -1.9077418e-04 -1.6275543e-04 -1.9651403e-05 -5.4234817e-05]\n",
-       "  [-9.3526716e-05 -4.9678278e-05  1.4228432e-05 -1.6644204e-04\n",
-       "    9.7964104e-05 -1.9300998e-04  1.5927634e-04 -2.7911537e-05\n",
-       "    1.8589392e-04 -7.2337089e-06 -3.2081801e-04 -1.8444611e-05\n",
-       "   -1.9077418e-04 -1.6275543e-04 -1.9651403e-05 -5.4234817e-05]\n",
-       "  [-9.3526716e-05 -4.9678278e-05  1.4228432e-05 -1.6644204e-04\n",
-       "    9.7964104e-05 -1.9300998e-04  1.5927634e-04 -2.7911537e-05\n",
-       "    1.8589392e-04 -7.2337089e-06 -3.2081801e-04 -1.8444611e-05\n",
-       "   -1.9077418e-04 -1.6275543e-04 -1.9651403e-05 -5.4234817e-05]]\n",
+       " [[-2.2143868e-04  3.5002387e-05  2.7029600e-04  2.8731427e-05\n",
+       "   -5.2404794e-05  1.4110740e-05 -2.0850824e-04  1.0625856e-04\n",
+       "    1.5787718e-04  1.1166865e-04 -3.7516581e-04  1.7297745e-04\n",
+       "   -6.5742475e-05  6.8289250e-05 -2.2307977e-04 -5.6489898e-05]\n",
+       "  [-2.2143868e-04  3.5002387e-05  2.7029600e-04  2.8731427e-05\n",
+       "   -5.2404794e-05  1.4110740e-05 -2.0850824e-04  1.0625856e-04\n",
+       "    1.5787718e-04  1.1166865e-04 -3.7516581e-04  1.7297745e-04\n",
+       "   -6.5742475e-05  6.8289250e-05 -2.2307977e-04 -5.6489898e-05]\n",
+       "  [-2.2143868e-04  3.5002387e-05  2.7029600e-04  2.8731427e-05\n",
+       "   -5.2404794e-05  1.4110740e-05 -2.0850824e-04  1.0625856e-04\n",
+       "    1.5787718e-04  1.1166865e-04 -3.7516581e-04  1.7297745e-04\n",
+       "   -6.5742475e-05  6.8289250e-05 -2.2307977e-04 -5.6489898e-05]\n",
+       "  [-2.2143868e-04  3.5002387e-05  2.7029600e-04  2.8731427e-05\n",
+       "   -5.2404794e-05  1.4110740e-05 -2.0850824e-04  1.0625856e-04\n",
+       "    1.5787718e-04  1.1166865e-04 -3.7516581e-04  1.7297745e-04\n",
+       "   -6.5742475e-05  6.8289250e-05 -2.2307977e-04 -5.6489898e-05]]\n",
        " <NDArray 4x16 @cpu(0)>, \n",
-       " [[-2.6243614e-04  1.8116225e-04  3.0691397e-05 -1.7932788e-04\n",
-       "    1.9677175e-04 -4.0638287e-04 -1.2812782e-04  2.4706309e-04\n",
-       "    1.3254523e-04  3.1308370e-04  1.3571592e-04 -3.8519321e-04\n",
-       "   -3.3583379e-04  1.8453244e-04  2.6650197e-04 -3.7035818e-04]\n",
-       "  [-2.6243614e-04  1.8116225e-04  3.0691397e-05 -1.7932788e-04\n",
-       "    1.9677175e-04 -4.0638287e-04 -1.2812782e-04  2.4706309e-04\n",
-       "    1.3254523e-04  3.1308370e-04  1.3571592e-04 -3.8519321e-04\n",
-       "   -3.3583379e-04  1.8453244e-04  2.6650197e-04 -3.7035818e-04]\n",
-       "  [-2.6243614e-04  1.8116225e-04  3.0691397e-05 -1.7932788e-04\n",
-       "    1.9677175e-04 -4.0638287e-04 -1.2812782e-04  2.4706309e-04\n",
-       "    1.3254523e-04  3.1308370e-04  1.3571592e-04 -3.8519321e-04\n",
-       "   -3.3583379e-04  1.8453244e-04  2.6650197e-04 -3.7035818e-04]\n",
-       "  [-2.6243614e-04  1.8116225e-04  3.0691397e-05 -1.7932788e-04\n",
-       "    1.9677175e-04 -4.0638287e-04 -1.2812782e-04  2.4706309e-04\n",
-       "    1.3254523e-04  3.1308370e-04  1.3571592e-04 -3.8519321e-04\n",
-       "   -3.3583379e-04  1.8453244e-04  2.6650197e-04 -3.7035818e-04]]\n",
+       " [[-2.60586694e-05 -7.48698367e-05  1.07375789e-04 -1.87350131e-04\n",
+       "   -1.13413116e-04  3.63644649e-04 -3.87638516e-04 -9.70876645e-05\n",
+       "    8.98165599e-05 -3.05409223e-04 -7.73195061e-05  5.32191916e-05\n",
+       "   -1.59329920e-05  4.66993079e-05  4.30881737e-05  1.13482580e-04]\n",
+       "  [-2.60586694e-05 -7.48698367e-05  1.07375789e-04 -1.87350131e-04\n",
+       "   -1.13413116e-04  3.63644649e-04 -3.87638516e-04 -9.70876645e-05\n",
+       "    8.98165599e-05 -3.05409223e-04 -7.73195061e-05  5.32191916e-05\n",
+       "   -1.59329920e-05  4.66993079e-05  4.30881737e-05  1.13482580e-04]\n",
+       "  [-2.60586694e-05 -7.48698367e-05  1.07375789e-04 -1.87350131e-04\n",
+       "   -1.13413116e-04  3.63644649e-04 -3.87638516e-04 -9.70876645e-05\n",
+       "    8.98165599e-05 -3.05409223e-04 -7.73195061e-05  5.32191916e-05\n",
+       "   -1.59329920e-05  4.66993079e-05  4.30881737e-05  1.13482580e-04]\n",
+       "  [-2.60586694e-05 -7.48698367e-05  1.07375789e-04 -1.87350131e-04\n",
+       "   -1.13413116e-04  3.63644649e-04 -3.87638516e-04 -9.70876645e-05\n",
+       "    8.98165599e-05 -3.05409223e-04 -7.73195061e-05  5.32191916e-05\n",
+       "   -1.59329920e-05  4.66993079e-05  4.30881737e-05  1.13482580e-04]]\n",
        " <NDArray 4x16 @cpu(0)>)"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +161,7 @@
     "encoder.initialize()\n",
     "X = nd.zeros((4, 7))\n",
     "Y = nd.ones((4, 10))\n",
-    "left_output, right_output = encoder(X, Y)\n",
+    "left_output, right_output = encoder([X, Y])\n",
     "# after running the encoder, output and state are both a list\n",
     "# which contains the whole output and state of each time state in history\n",
     "left_output, right_output"
@@ -176,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,21 +188,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "\n",
-       "[[0.99716175]\n",
-       " [0.99716175]\n",
-       " [0.99716175]\n",
-       " [0.99716175]]\n",
+       "[[0.9971166]\n",
+       " [0.9971166]\n",
+       " [0.9971166]\n",
+       " [0.9971166]]\n",
        "<NDArray 4x1 @cpu(0)>"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -236,31 +229,36 @@
      "text": [
       "Sequential(\n",
       "  (0): TwoSeqEncoder(\n",
-      "    (embedding): Embedding(2 -> 10, float32)\n",
+      "    (embedding): Embedding(1000 -> 16, float32)\n",
       "    (rnn): LSTM(None -> 32, TNC, num_layers=16)\n",
       "  )\n",
+      "  (1): Lambda(<lambda>)\n",
       ")\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "forward() takes 2 positional arguments but 3 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-169-e391240db854>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minitialize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/miniconda3/envs/dl/lib/python3.7/site-packages/mxnet/gluon/block.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m    538\u001b[0m             \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    539\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 540\u001b[0;31m         \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    541\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    542\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: forward() takes 2 positional arguments but 3 were given"
-     ]
+     "data": {
+      "text/plain": [
+       "\n",
+       "[[1.]\n",
+       " [1.]\n",
+       " [1.]\n",
+       " [1.]]\n",
+       "<NDArray 4x1 @cpu(0)>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "model = nn.Sequential()\n",
-    "model.add(TwoSeqEncoder(vocab_size=2, embed_size=10, num_hiddens=32, num_layers=16))\n",
+    "model.add(TwoSeqEncoder(vocab_size=1000, embed_size=16, num_hiddens=32, num_layers=16),\\\n",
+    "          ManhattanDistance)\n",
     "model.initialize()\n",
     "print(model)\n",
-    "model(X, Y)"
+    "model([X, Y])"
    ]
   },
   {
@@ -276,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {
     "attributes": {
      "classes": [],
@@ -290,16 +288,15 @@
     "    model.initialize(init.Xavier(), force_reinit=True, ctx=ctx)\n",
     "    trainer = gluon.Trainer(model.collect_params(),\n",
     "                            'adam', {'learning_rate': lr})\n",
-    "    loss = MaskedSoftmaxCELoss()\n",
+    "    loss = gloss.L1Loss\n",
     "    tic = time.time()\n",
     "    for epoch in range(1, num_epochs+1):\n",
     "        l_sum, num_tokens_sum = 0.0, 0.0\n",
     "        for batch in data_iter:\n",
-    "            X, X_vlen, Y, Y_vlen = [x.as_in_context(ctx) for x in batch]\n",
-    "            Y_input, Y_label, Y_vlen = Y[:,:-1], Y[:,1:], Y_vlen-1\n",
+    "            left, right, label = [x.as_in_context(ctx) for x in batch]\n",
     "            with autograd.record():\n",
-    "                Y_hat, _ = model(X, Y_input, X_vlen, Y_vlen)\n",
-    "                l = loss(Y_hat, Y_label, Y_vlen)\n",
+    "                predict = model([left, right])\n",
+    "                l = loss(predict, label)\n",
     "            l.backward()\n",
     "            d2l.grad_clipping_gluon(model, 5, ctx)\n",
     "            num_tokens = Y_vlen.sum().asscalar()\n",
